--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           python-version: "3.13"
       - run: |
           pip install pylint
-          pylint src/ || true
+          pylint src/ --output-format=text > lint_report.txt || true
 
   security:
     runs-on: ubuntu-latest
